# lisp

./: LICENSE  lisp.cabal  stack.yaml
app/: Main.hs
example/: fac.lisp  fibs.lisp  primes.lisp
lib/: lisp.lisp  prelude.lisp
lib/prelude/: function.lisp  gensym.lisp  list.lisp  macros.lisp  repl.lisp
src/: Lisp.hs
src/Lisp/: Builtins.hs  Compiler.hs  Core.hs  Data.hs  Errors.hs  Helpers.hs  Index.hs  Main.hs  Monad.hs  Parser.hs  Prelude.hs  Repl.hs  SymbolTable.hs  VirtualMachine.hs
src/Lisp/Core/: Bool.hs  Constants.hs  Error.hs  IO.hs  List.hs  Macros.hs  Math.hs  Meta.hs
src/Lisp/Prelude/: Bool.hs  Constants.hs  Error.hs  Function.hs  IO.hs  List.hs  Load.hs  Macros.hs  Math.hs  Meta.hs
